initial commit with admin for user, cohorts, assessments and user assessments

--- a/admin/index.html
+++ b/admin/index.html
@@ -7,16 +7,36 @@
     <link rel="stylesheet" href="../css/bootstrap.css" />
     <link rel="stylesheet" href="../css/styles.css" />
 
-    <title>CIS 282 Store - Admin</title>
+    <title>CIS 282 Final - Admin</title>
   </head>
   <body>
-    <h3>CIS 282 Store - Admin Site</h3>
+    <h3>CIS 282 Final - Admin Site</h3>
     <div class="container-fluid">
+      <h4>Build a classroom</h4>
       <ul>
-        <li><a href="products.php">Manage Products</a></li>
-        <li><a href="categories.php">Manage Categories</a></li>
+        <li><a href="users.php">Manage Users</a></li>
+        <li><a href="cohorts.php">Manage Cohorts</a></li>
       </ul>
-
+      <br>
+      <h4>Assessments</h4>
+      <ul>
+        <li><a href="assessments.php">Assessments</a></li>
+        <li><a href="user_assessments.php">Score an Assessment</a></li>
+      </ul>
+      <br>
+      <h4>Build a Cohort</h4>
+      <ul>
+        <li><a href="#">Manage Courses</a></li>
+        <li><a href="#">Manage Terms</a></li>
+        <li><a href="#">Manage Times</a></li>
+      </ul>
+      <br>
+      <h4>Misc.</h4>
+      <ul>
+        <li><a href="#">Manage Access Levels</a></li>
+        <li><a href="#">Manage Assessment Types</a></li>
+      </ul>
+      <br>
       <p><a href="index.html">Back to Main Page</a></p>
     </div>
   </body>
